PharmacyMedicineSupply Microservice/PharmacyMedicineSupply Microservice/manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "pharmacymedsupply-cf36"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "pharmacymedsupply-cf36"
  template:
    metadata:
      labels:
        app: "pharmacymedsupply-cf36"
    spec:
      containers:
        - name: "pharmacymedsupply-cf36"
          image: "pharmacymedsupply.azurecr.io/pharmacymedsupply"
          ports:
          - containerPort: 80
