PharmacyMedicineSupply Microservice/PharmacyMedicineSupply Microservice/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "pharmacymedsupply-cf36"
    labels:
        app: "pharmacymedsupply-cf36"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: pharmacymedsupply-pharmacymedsupply-cf36.caa2600e73f64074b1f2.centralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "pharmacymedsupply-cf36"
                servicePort: 80
